Добавление недостающих методов