@@ -22,6 +22,7 @@ import ru.practicum.explorewithme.user.repository.UserRepository;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -100,12 +101,13 @@ public class RequestServiceImpl implements RequestService {
     @Transactional(readOnly = true)
     public List<ParticipationRequestDto> getUserRequests(Long userId) {
         userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + userId + " не найден"));
 
-        return requestRepository.findByRequesterId(userId)
-                .stream()
+        List<Request> requests = requestRepository.findAllByRequesterId(userId);
+
+        return requests.stream()
                 .map(RequestMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -175,5 +177,72 @@ public class RequestServiceImpl implements RequestService {
         requestRepository.saveAll(requests);
 
         return RequestMapper.toEventRequestStatusUpdateResult(confirmed, rejected);
+    }
+
+    @Override
+    @Transactional
+    public ParticipationRequestDto addRequest(Long userId, Long eventId) {
+        User requester = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + userId + " не найден"));
+
+        Event event = eventRepository.findById(eventId)
+                .orElseThrow(() -> new NotFoundException("Событие с id=" + eventId + " не найдено"));
+
+        // 1. Проверка дублирования заявки
+        if (requestRepository.existsByRequesterIdAndEventId(userId, eventId)) {
+            throw new ConflictException("Нельзя добавить повторный запрос на участие");
+        }
+
+        // 2. Инициатор не может подавать заявку на свое событие
+        if (event.getInitiator().getId().equals(userId)) {
+            throw new ConflictException("Инициатор события не может добавить запрос на участие в своём событии");
+        }
+
+        // 3. Заявки можно подавать только на опубликованные события
+        if (!event.getState().equals(EventState.PUBLISHED)) {
+            throw new ConflictException("Нельзя участвовать в неопубликованном событии");
+        }
+
+        // 4. Проверка лимита участников
+        int limit = event.getParticipantLimit();
+        if (limit > 0) {
+            long confirmedRequests = requestRepository.countByEventIdAndStatus(eventId, RequestStatus.CONFIRMED);
+            if (confirmedRequests >= limit) {
+                throw new ConflictException("У события достигнут лимит запросов на участие");
+            }
+        }
+
+        // 5. Формирование заявки и определение её статуса
+        Request request = new Request();
+        request.setRequester(requester);
+        request.setEvent(event);
+        request.setCreated(LocalDateTime.now());
+
+        // Если пре-модерация отключена или лимит равен 0 (безлимит), статус сразу CONFIRMED
+        if (!event.getRequestModeration() || limit == 0) {
+            request.setStatus(RequestStatus.CONFIRMED);
+        } else {
+            request.setStatus(RequestStatus.PENDING);
+        }
+
+        return RequestMapper.toDto(requestRepository.save(request));
+    }
+
+    @Override
+    @Transactional
+    public ParticipationRequestDto cancelRequest(Long userId, Long requestId) {
+        userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь с id=" + userId + " не найден"));
+
+        Request request = requestRepository.findById(requestId)
+                .orElseThrow(() -> new NotFoundException("Запрос с id=" + requestId + " не найден"));
+
+        if (!request.getRequester().getId().equals(userId)) {
+            throw new ConflictException("Пользователь может отменить только свой запрос на участие");
+        }
+
+        request.setStatus(RequestStatus.CANCELED);
+
+        return RequestMapper.toDto(requestRepository.save(request));
     }
 }
